fix spacing on mobile

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -23,6 +23,7 @@
   margin-top: 2rem;
   @include until($fullhd) {
     margin: auto;
+    margin-top: 2rem;
   }
 }
 
